add mixin to resolve global-reset missing method

--- a/app/assets/stylesheets/active_admin/_forms.scss
+++ b/app/assets/stylesheets/active_admin/_forms.scss
@@ -1,3 +1,4 @@
+@import "active_admin/mixins";
 //= depend_on_asset "active_admin/datepicker/datepicker-input-icon.png"
 // -------------------------------------- Active Admin Forms
 form {
