--- a/app/assets/stylesheets/active_admin/_header.scss
+++ b/app/assets/stylesheets/active_admin/_header.scss
@@ -1,3 +1,4 @@
+@import "active_admin/mixins";
 //= depend_on_asset "active_admin/nested_menu_arrow.gif"
 //= depend_on_asset "active_admin/nested_menu_arrow_dark.gif"
 // ----------------------------------- Header
