--- a/app/assets/stylesheets/active_admin/components/_status_tags.scss
+++ b/app/assets/stylesheets/active_admin/components/_status_tags.scss
@@ -1,5 +1,5 @@
 .status_tag {
-  background: darken($secondary-color, 15%);
+  background: darken(grey, 15%);
   color: #fff;
   text-transform: uppercase;
   letter-spacing: 0.15em;
