--- a/app/assets/stylesheets/active_admin/structure/_title_bar.scss
+++ b/app/assets/stylesheets/active_admin/structure/_title_bar.scss
@@ -9,7 +9,7 @@
   width: 100%;
   position: relative;
   margin: 0;
-  padding: 10px $horizontal-page-margin;
+  padding: 10px 0px;
   z-index: 800;
 
   #titlebar_left, #titlebar_right {
